Added solutions for string and array